--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-hook-form": "^6.15.1",
     "react-native": "0.63.4",
     "react-native-elements": "^3.2.0",
+    "react-native-fast-image": "^8.3.4",
     "react-native-fast-toast": "^2.2.0",
     "react-native-gesture-handler": "^1.10.1",
     "react-native-month-year-picker": "^1.6.3",
